# Xinu2022

./: readme.txt  start-qemu.sh
barebone-hello/: CMakeLists.txt  README  hello.c  toolchain.cmake
compile/: Makefile
config/: Configuration  conf.c  conf.h
device/disk/: disk.cxx
device/kbdvga/: kbd.h  kbddisp.S  kbdgetc.c  kbdhandler.c  kbdread.c  vgawrite.c
include/: kernel.h  memory.h  process.h  prototypes.h  shprototypes.h  syscalls.h
lib/: filesystem.cxx
shell/: addargs.c  shell.c  xsh_echo.c  xsh_ps.c  xsh_test.c
system/: create.c  ctxsw.S  evec.c  initialize.c  insert.c  intr.S  kill.c  main.c  meminit.c  ready.c  resched.c  sleep.c  start.S  syscalls.c
